--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
 <body>
 
     <script src="../src/index.js"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=ATXQx-ERAEEy_s3fXCErilF0vD9irdJMW0jHqR3VwifBYraH-SdzGwqa2V4aC0iWGijPr2FgFqHZO4we"></script>
+
     
     <div id="root"></div>
 </body>
